force-app/main/default/objects/Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Defines a place where a significant action occurred.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>