force-app/main/default/objects/Log__c/fields/Stack_trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_trace__c</fullName>
    <description>Exception stack trace.</description>
    <label>Stack trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>