force-app/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of log</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
                <label>Error</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <label>Info</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>