force-app/main/default/objects/Log__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Context_User__c</columns>
    <columns>Message__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>